DUTCH: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110675 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -63,6 +63,16 @@ label.currentClassification=Huidige classificatie
 label.classifiedBy=Geclassificeerd door
 label.classificationAgency=Classificatiebureau
 label.classificationReasons=Reden(en) voor classificatie
+label.downgradeDate=Downgradedatum
+label.downgradeEvent=Downgradegebeurtenis
+label.downgradeInstructions=Downgrade-instructies
+label.declassificationDate=Classificatieopheffingsdatum
+label.declassificationEvent=Classificatieopheffingsgebeurtenis
+label.declassificationExemptions=Clasificatieopheffingsuitzonderingen
+label.lastReclassifyBy=Laatst geherclassificeerd door
+label.lastReclassifyAt=Datum laatste herclassificatie
+label.lastReclassifyReason=Reden laatste herclassificatie
+label.lastReclassificationAction=Laatste herclassificatie-actie
 
 ## Common Property Selector
 label.menu.content=Content
@@ -158,6 +168,7 @@ actions.move-dm-record=Record verplaatsen
 actions.recorded-version-config=Opties voor automatisch declareren
 actions.add-relationship=Relatie toevoegen
 actions.classify-content=Classificeren
+actions.edit-classified-content=Classificatie bewerken
 
 ## File Plan Action Outcomes
 message.multi-select={0} geselecteerde onderdelen
