--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
@@ -1,10 +1,33 @@
 label.button.create=Classificeren
+label.button.save=Opslaan
 label.button.cancel=Annuleren
 label.classify.dialog.title=Bestand classificeren
 label.classify.dialog.title.rm=Record classificeren
+label.edit.classification.dialog.title=Geclassificeerd bestand bewerken
+label.edit.classification.dialog.title.rm=Geclassificeerde record bewerken
 label.classify.levels=Classificatie
 label.classify.by=Geclassificeerd door
 label.classify.agency=Classificatiebureau
+label.classify.agency.help=Het bureau, zoals een overheids- of juridische instantie, die verantwoordelijk is voor classificatie. (optioneel)
 label.classify.reasons=Classificatiereden(en)
+label.classify.downgradeSchedule=Downgradeschema
+label.classify.downgradeDate=Downgradedatum
+label.classify.downgradeEvent=Gebeurtenis
+label.classify.downgradeEvent.help=De gebeurtenis die de classificatiedowngrade triggert. De downgrade vindt niet automatisch plaats na deze gebeurtenis, maar moet handmatig worden uitgevoerd.
+label.classify.downgradeInstructions=Instructies
+label.classify.declassificationSchedule=Classificatieopheffingsschema
+label.classify.declassificationDate=Classificatieopheffingsdatum
+label.classify.declassificationEvent=Gebeurtenis
+label.classify.declassificationEvent.help=De gebeurtenis die classificatieopheffing triggert. Classificatieopheffing vindt niet automatisch plaats na deze gebeurtenis, maar moet handmatig worden uitgevoerd. 
+label.classify.declassificationExemptions=Uitzonderingen
+label.classify.lastReclassifyBy=Geherclassificeerd op
+label.classify.lastReclassifyReason=Reden van herclassificatie
 label.classify.content.success=Content is geclassificeerd
-label.classify.content.failure=Kan content niet classificeren
+label.classify.content.failure=Content kan niet worden geclassificeerd
+label.edit.classified.content.success=Geclassificeerde content is bewerkt
+label.edit.classified.content.failure=Geclassificeerde content kan niet worden bewerkt
+label.edit.classified.content.reclassificationInformation=U staat op het punt om dit bestand te {0}.
+label.edit.classified.content.upgrade=upgraden
+label.edit.classified.content.downgrade=downgraden
+label.edit.classified.content.declassify=declassificeren
+label.classify.classifiedBy.validation.error=U dient een naam in te voeren die niet begint of eindigt met een witruimte.
