BRAZILIAN PORTUGUESE: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110677 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -63,6 +63,16 @@ label.currentClassification=Classifica\u00e7\u00e3o atual
 label.classifiedBy=Classificado por
 label.classificationAgency=\u00d3rg\u00e3o de classifica\u00e7\u00e3o
 label.classificationReasons=Motivo(s) da classifica\u00e7\u00e3o
+label.downgradeDate=Data de rebaixamento
+label.downgradeEvent=Evento de rebaixamento
+label.downgradeInstructions=Instru\u00e7\u00f5es de rebaixamento
+label.declassificationDate=Data de desclassifica\u00e7\u00e3o
+label.declassificationEvent=Evento de desclassifica\u00e7\u00e3o
+label.declassificationExemptions=Isen\u00e7\u00f5es de desclassifica\u00e7\u00e3o
+label.lastReclassifyBy=\u00daltima reclassifica\u00e7\u00e3o por
+label.lastReclassifyAt=Data da \u00faltima reclassifica\u00e7\u00e3o
+label.lastReclassifyReason=Raz\u00e3o da \u00faltima reclassifica\u00e7\u00e3o
+label.lastReclassificationAction=A\u00e7\u00e3o da \u00faltima reclassifica\u00e7\u00e3o
 
 ## Common Property Selector
 label.menu.content=Conte\u00fado
@@ -158,6 +168,7 @@ actions.move-dm-record=Mover documento arquiv\u00edstico
 actions.recorded-version-config=Op\u00e7\u00f5es de auto declara\u00e7\u00e3o
 actions.add-relationship=Adicionar relacionamento
 actions.classify-content=Classificar
+actions.edit-classified-content=Editar classifica\u00e7\u00e3o
 
 ## File Plan Action Outcomes
 message.multi-select={0} itens selecionados
