--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
@@ -1,10 +1,33 @@
 label.button.create=Classificar
+label.button.save=Salvar
 label.button.cancel=Cancelar
 label.classify.dialog.title=Classificar arquivo
 label.classify.dialog.title.rm=Classificar registro
+label.edit.classification.dialog.title=Editar arquivo classificado
+label.edit.classification.dialog.title.rm=Editar registro classificado
 label.classify.levels=Classifica\u00e7\u00e3o
 label.classify.by=Classificado por
 label.classify.agency=\u00d3rg\u00e3o de classifica\u00e7\u00e3o
+label.classify.agency.help=A ag\u00eancia, como um governo ou corpo jur\u00eddico, que regula a classifica\u00e7\u00e3o. (opcional)
 label.classify.reasons=Motivo(s) da classifica\u00e7\u00e3o
+label.classify.downgradeSchedule=Programa\u00e7\u00e3o de rebaixamento
+label.classify.downgradeDate=Data de rebaixamento
+label.classify.downgradeEvent=Evento
+label.classify.downgradeEvent.help=O evento que acionar\u00e1 o rebaixamento da classifica\u00e7\u00e3o. O rebaixamento n\u00e3o acontecer\u00e1 automaticamente ap\u00f3s este evento - ele precisa ser feito manualmente.
+label.classify.downgradeInstructions=Instru\u00e7\u00f5es
+label.classify.declassificationSchedule=Programa\u00e7\u00e3o de desclassifica\u00e7\u00e3o
+label.classify.declassificationDate=Data de desclassifica\u00e7\u00e3o
+label.classify.declassificationEvent=Evento
+label.classify.declassificationEvent.help=O evento que acionar\u00e1 a desclassifica\u00e7\u00e3o. A desclassifica\u00e7\u00e3o n\u00e3o acontecer\u00e1 automaticamente ap\u00f3s este evento - ela precisa ser feita manualmente. 
+label.classify.declassificationExemptions=Isen\u00e7\u00f5es
+label.classify.lastReclassifyBy=Reclassificado por
+label.classify.lastReclassifyReason=Raz\u00e3o para reclassifica\u00e7\u00e3o
 label.classify.content.success=Conte\u00fado classificado corretamente
 label.classify.content.failure=N\u00e3o foi poss\u00edvel classificar conte\u00fado
+label.edit.classified.content.success=Conte\u00fado classificado editado corretamente
+label.edit.classified.content.failure=N\u00e3o foi poss\u00edvel editar o conte\u00fado classificado
+label.edit.classified.content.reclassificationInformation=Voc\u00ea est\u00e1 prestes a {0} este arquivo.
+label.edit.classified.content.upgrade=atualizar
+label.edit.classified.content.downgrade=rebaixar
+label.edit.classified.content.declassify=declassificar
+label.classify.classifiedBy.validation.error=Voc\u00ea precisa digitar um nome que n\u00e3o come\u00e7a ou termina com um espa\u00e7o em branco.
