SIMPLIFIED CHINESE: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110678 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -63,6 +63,16 @@ label.currentClassification=\u5f53\u524d\u5206\u7c7b
 label.classifiedBy=\u5206\u7c7b\u4eba
 label.classificationAgency=\u5206\u7c7b\u4ee3\u7406
 label.classificationReasons=\u5206\u7c7b\u539f\u56e0
+label.downgradeDate=\u964d\u7ea7\u65e5\u671f
+label.downgradeEvent=\u964d\u7ea7\u4e8b\u4ef6
+label.downgradeInstructions=\u964d\u7ea7\u8bf4\u660e
+label.declassificationDate=\u53d6\u6d88\u5206\u7c7b\u65e5\u671f
+label.declassificationEvent=\u53d6\u6d88\u5206\u7c7b\u4e8b\u4ef6
+label.declassificationExemptions=\u53d6\u6d88\u5206\u7c7b\u4f8b\u5916
+label.lastReclassifyBy=\u4e0a\u6b21\u91cd\u65b0\u5206\u7c7b\u65b9\u5f0f
+label.lastReclassifyAt=\u4e0a\u6b21\u91cd\u65b0\u5206\u7c7b\u65e5\u671f
+label.lastReclassifyReason=\u4e0a\u6b21\u91cd\u65b0\u5206\u7c7b\u7684\u539f\u56e0
+label.lastReclassificationAction=\u4e0a\u6b21\u91cd\u65b0\u5206\u7c7b\u64cd\u4f5c
 
 ## Common Property Selector
 label.menu.content=\u5185\u5bb9
@@ -158,6 +168,7 @@ actions.move-dm-record=\u79fb\u52a8\u8bb0\u5f55
 actions.recorded-version-config=\u81ea\u52a8\u58f0\u660e\u9009\u9879
 actions.add-relationship=\u6dfb\u52a0\u5173\u7cfb
 actions.classify-content=\u5206\u7c7b
+actions.edit-classified-content=\u7f16\u8f91\u5206\u7c7b
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u4e2a\u6240\u9009\u9879\u76ee
