--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_zh_CN.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_zh_CN.properties
@@ -1,10 +1,33 @@
 label.button.create=\u5206\u7c7b
+label.button.save=\u4fdd\u5b58
 label.button.cancel=\u53d6\u6d88
 label.classify.dialog.title=\u5206\u7c7b\u6587\u4ef6
 label.classify.dialog.title.rm=\u5206\u7c7b\u8bb0\u5f55
+label.edit.classification.dialog.title=\u7f16\u8f91\u5206\u7c7b\u7684\u6587\u4ef6
+label.edit.classification.dialog.title.rm=\u7f16\u8f91\u5206\u7c7b\u7684\u8bb0\u5f55
 label.classify.levels=\u5206\u7c7b
-label.classify.by=\u5206\u7c7b\u4eba
+label.classify.by=\u5206\u7c7b\u8005
 label.classify.agency=\u5206\u7c7b\u4ee3\u7406
+label.classify.agency.help=\u6307\u5b9a\u5206\u7c7b\u89c4\u5219\u7684\u673a\u6784\uff0c\u4f8b\u5982\u653f\u5e9c\u6216\u6cd5\u5f8b\u673a\u6784\u3002 \uff08\u53ef\u9009\uff09
 label.classify.reasons=\u5206\u7c7b\u539f\u56e0
+label.classify.downgradeSchedule=\u964d\u7ea7\u8ba1\u5212
+label.classify.downgradeDate=\u964d\u7ea7\u65e5\u671f
+label.classify.downgradeEvent=\u4e8b\u4ef6
+label.classify.downgradeEvent.help=\u5c06\u89e6\u53d1\u5206\u7c7b\u964d\u7ea7\u7684\u4e8b\u4ef6\u3002 \u6b64\u4e8b\u4ef6\u4e4b\u540e\u4e0d\u4f1a\u81ea\u52a8\u53d1\u751f\u964d\u7ea7 - \u9700\u8981\u624b\u52a8\u5b8c\u6210\u3002
+label.classify.downgradeInstructions=\u8bf4\u660e
+label.classify.declassificationSchedule=\u53d6\u6d88\u5206\u7c7b\u8ba1\u5212
+label.classify.declassificationDate=\u53d6\u6d88\u5206\u7c7b\u65e5\u671f
+label.classify.declassificationEvent=\u4e8b\u4ef6
+label.classify.declassificationEvent.help=\u5c06\u89e6\u53d1\u53d6\u6d88\u5206\u7c7b\u7684\u4e8b\u4ef6\u3002 \u6b64\u4e8b\u4ef6\u4e4b\u540e\u53d6\u6d88\u5206\u7c7b\u4e0d\u4f1a\u81ea\u52a8\u53d1\u751f - \u9700\u8981\u624b\u52a8\u5b8c\u6210\u3002 
+label.classify.declassificationExemptions=\u4f8b\u5916
+label.classify.lastReclassifyBy=\u91cd\u65b0\u5206\u7c7b\u8005
+label.classify.lastReclassifyReason=\u91cd\u65b0\u5206\u7c7b\u7684\u539f\u56e0
 label.classify.content.success=\u5df2\u6210\u529f\u5206\u7c7b\u5185\u5bb9
-label.classify.content.failure=\u65e0\u6cd5\u5206\u7c7b\u5185\u5bb9
+label.classify.content.failure=\u6211\u4eec\u65e0\u6cd5\u5bf9\u5185\u5bb9\u5206\u7c7b
+label.edit.classified.content.success=\u5df2\u6210\u529f\u7f16\u8f91\u5206\u7c7b\u5185\u5bb9
+label.edit.classified.content.failure=\u6211\u4eec\u65e0\u6cd5\u7f16\u8f91\u5206\u7c7b\u5185\u5bb9
+label.edit.classified.content.reclassificationInformation=\u60a8\u6253\u7b97 {0} \u6b64\u6587\u4ef6\u3002
+label.edit.classified.content.upgrade=\u5347\u7ea7
+label.edit.classified.content.downgrade=\u964d\u7ea7
+label.edit.classified.content.declassify=\u53d6\u6d88\u5206\u7c7b
+label.classify.classifiedBy.validation.error=\u60a8\u9700\u8981\u8f93\u5165\u4e00\u4e2a\u5f00\u5934\u548c\u7ed3\u5c3e\u6ca1\u6709\u7a7a\u683c\u7684\u540d\u79f0\u3002
