Added messages for label.classify.lastReclassifyBy.help and label.classify.lastReclassifyReason.help Also added new label.classify.reclassifyReason.help
RM-2536

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110842 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -22,12 +22,11 @@ label.classify.declassificationEvent.help=The event that will trigger declassifi
 label.classify.declassificationExemptions=Exemptions
 label.classify.reclassifyBy=Reclassified By
 label.classify.reclassifyReason=Reason
+label.classify.reclassifyReason.help=Enter why you’re changing the classification.
 label.classify.lastReclassifyBy=Last Reclassified By
+label.classify.lastReclassifyBy.help=This is the person who previously classified the file.
 label.classify.lastReclassifyReason=Reason
-#FIXME: Change the help text
-label.classify.lastReclassifyBy.help=Last Reclassified By Help
-#FIXME: Change the help text
-label.classify.lastReclassifyReason.help=Reason Help
+label.classify.lastReclassifyReason.help=Enter why you’re changing the classification.
 label.classify.content.success=Successfully classified content
 label.classify.content.failure=We couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
