Modified to fix broken apostrophe's.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@111091 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -22,17 +22,17 @@ label.classify.declassificationEvent.help=The event that will trigger declassifi
 label.classify.declassificationExemptions=Exemptions
 label.classify.reclassifyBy=Reclassified By
 label.classify.reclassifyReason=Reason
-label.classify.reclassifyReason.help=Enter the reason why you\'re changing the classification.
+label.classify.reclassifyReason.help=Enter the reason why you're changing the classification.
 label.classify.lastReclassifyBy=Last Reclassified By
 label.classify.lastReclassifyBy.help=This is the person who previously reclassified the file.
 label.classify.lastReclassifyReason=Reason
-label.classify.lastReclassifyReason.help=Enter the reason why you\'re changing the classification.
+label.classify.lastReclassifyReason.help=Enter the reason why you're changing the classification.
 label.classify.content.success=Successfully classified content
-label.classify.content.failure=We couldn\'t classify content
+label.classify.content.failure=We couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
-label.edit.classified.content.failure=We couldn\'t edit classified content
-label.edit.classified.content.reclassificationInformation=You\'re about to {0} this file.
+label.edit.classified.content.failure=We couldn't edit classified content
+label.edit.classified.content.reclassificationInformation=You''re about to {0} this file.
 label.edit.classified.content.upgrade=upgrade
 label.edit.classified.content.downgrade=downgrade
 label.edit.classified.content.declassify=declassify
-label.classify.classifiedBy.validation.error=You need to enter a name that doesn\'t start or end with a whitespace.
+label.classify.classifiedBy.validation.error=You need to enter a name that doesn't start or end with a whitespace.
