--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -31,7 +31,7 @@ label.classify.content.success=Successfully classified content
 label.classify.content.failure=We couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
 label.edit.classified.content.failure=We couldn't edit classified content
-label.edit.classified.content.reclassificationInformation=You''re about to {0} this file.
+label.edit.classified.content.reclassificationInformation=You're about to {0} this file.
 label.edit.classified.content.upgrade=upgrade
 label.edit.classified.content.downgrade=downgrade
 label.edit.classified.content.declassify=declassify
