RM-2564 Text change to the Reclassified reason help.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@111579 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -26,7 +26,7 @@ label.classify.reclassifyReason.help=Enter the reason why you're changing the cl
 label.classify.lastReclassifyBy=Last Reclassified By
 label.classify.lastReclassifyBy.help=This is the person who previously reclassified the file.
 label.classify.lastReclassifyReason=Reason
-label.classify.lastReclassifyReason.help=Enter the reason why you're changing the classification.
+label.classify.lastReclassifyReason.help=This is the reason why the file was previously reclassified. You can change this if required.
 label.classify.content.success=Successfully classified content
 label.classify.content.failure=We couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
