GERMAN: Updated RM 3.0 bundle based on EN-RM-rev111215
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112084 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_de.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_de.properties
@@ -18,10 +18,15 @@ label.classify.downgradeInstructions=Anweisungen
 label.classify.declassificationSchedule=Deklassifizierungsplan
 label.classify.declassificationDate=Deklassifizierungsdatum
 label.classify.declassificationEvent=Ereignis
-label.classify.declassificationEvent.help=Das Ereignis, das die Deklassifizierung ausl\u00f6st. Die Deklassifizierung erfolgt nach diesem Ereignis nicht automatisch, sondern muss manuell durchgef\u00fchrt werden. 
+label.classify.declassificationEvent.help=Das Ereignis, das die Deklassifizierung ausl\u00f6st. Die Deklassifizierung erfolgt nach diesem Ereignis nicht automatisch, sondern muss manuell durchgef\u00fchrt werden.
 label.classify.declassificationExemptions=Ausnahmen
-label.classify.lastReclassifyBy=Reklassifiziert von
-label.classify.lastReclassifyReason=Grund f\u00fcr Reklassifizierung
+label.classify.reclassifyBy=Reklassifiziert von
+label.classify.reclassifyReason=Grund
+label.classify.reclassifyReason.help=Geben Sie einen Grund f\u00fcr die \u00c4nderung der Klassifizierung an.
+label.classify.lastReclassifyBy=Zuletzt reklassifiziert von
+label.classify.lastReclassifyBy.help=Die Person, die die Datei zuletzt reklassifiziert hat.
+label.classify.lastReclassifyReason=Grund
+label.classify.lastReclassifyReason.help=Geben Sie einen Grund f\u00fcr die \u00c4nderung der Klassifizierung an.
 label.classify.content.success=Inhalt wurde erfolgreich klassifiziert
 label.classify.content.failure=Inhalt konnte nicht klassifiziert werden
 label.edit.classified.content.success=Klassifizierter Inhalt wurde erfolgreich bearbeitet
