SPANISH: Updated RM 3.0 bundle based on EN-RM-rev111215
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112086 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
@@ -18,10 +18,15 @@ label.classify.downgradeInstructions=Instrucciones
 label.classify.declassificationSchedule=Planificaci\u00f3n de desclasificaci\u00f3n
 label.classify.declassificationDate=Fecha de desclasificaci\u00f3n
 label.classify.declassificationEvent=Evento
-label.classify.declassificationEvent.help=El evento que ejecutar\u00e1 la desclasificaci\u00f3n. La desclasificaci\u00f3n no se producir\u00e1 autom\u00e1ticamente despu\u00e9s de este evento; deber\u00e1 realizarse de modo manual. 
+label.classify.declassificationEvent.help=El evento que ejecutar\u00e1 la desclasificaci\u00f3n. La desclasificaci\u00f3n no se producir\u00e1 autom\u00e1ticamente despu\u00e9s de este evento; deber\u00e1 realizarse de modo manual.
 label.classify.declassificationExemptions=Exenciones
-label.classify.lastReclassifyBy=Reclasificado por
-label.classify.lastReclassifyReason=Raz\u00f3n de la reclasificaci\u00f3n
+label.classify.reclassifyBy=Reclasificado por
+label.classify.reclassifyReason=Raz\u00f3n
+label.classify.reclassifyReason.help=Introduzca la raz\u00f3n por la que est\u00e1 cambiando la clasificaci\u00f3n.
+label.classify.lastReclassifyBy=Reclasificado por \u00faltima vez por
+label.classify.lastReclassifyBy.help=Esta es la persona que reclasific\u00f3 el fichero anteriormente.
+label.classify.lastReclassifyReason=Raz\u00f3n
+label.classify.lastReclassifyReason.help=Introduzca la raz\u00f3n por la que est\u00e1 cambiando la clasificaci\u00f3n.
 label.classify.content.success=Contenido clasificado correctamente
 label.classify.content.failure=No se ha podido clasificar el contenido
 label.edit.classified.content.success=Contenido clasificado editado correctamente
