--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
@@ -1,15 +1,15 @@
-header.singleUpload=Subir fichero
+header.singleUpload=Cargar fichero
 header.singleUpdate=Actualizar fichero
 header.singleImport=Importar
 
 section.recordType=Elegir tipo de documento de archivo
 section.file=Seleccionar fichero
 
-label.singleUploadTip=Con la \u00faltima versi\u00f3n instalada de Flash Player, puede subir m\u00faltiples ficheros. \
+label.singleUploadTip=Con la \u00faltima versi\u00f3n instalada de Flash Player, puede cargar m\u00faltiples ficheros. \
   Desc\u00e1rguelo del <a href="http://www.adobe.com/go/getflashplayer">Centro de Descargas de Adobe Flash Player</a>.
 
-label.singleUpdateTip=Subir una nueva versi\u00f3n de {0}
-button.upload=Subir fichero
+label.singleUpdateTip=Cargar una nueva versi\u00f3n de {0}
+button.upload=Cargar fichero
 label.file=Fichero
 
 section.version=Informaci\u00f3n de la versi\u00f3n
@@ -18,9 +18,9 @@ label.minorVersion=Versi\u00f3n menor
 label.majorVersion=Versi\u00f3n mayor
 label.comments=Comentarios
 
-message.uploading=Subiendo el documento...
-message.success=Documento subido correctamente
-message.failure=No se pudo subir el documento
+message.uploading=Cargando el documento...
+message.success=Documento cargado correctamente
+message.failure=No se pudo cargar el documento
 
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
