--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_fr.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_fr.properties
@@ -18,16 +18,21 @@ label.classify.downgradeInstructions=Instructions
 label.classify.declassificationSchedule=R\u00e8gle de d\u00e9classification
 label.classify.declassificationDate=Date de d\u00e9classification
 label.classify.declassificationEvent=Ev\u00e9nement
-label.classify.declassificationEvent.help=Ev\u00e9nement qui d\u00e9clenchera la d\u00e9classification. La d\u00e9classification n'interviendra pas automatiquement apr\u00e8s cet \u00e9v\u00e9nement\u00a0; elle devra \u00eatre effectu\u00e9e manuellement. 
+label.classify.declassificationEvent.help=Ev\u00e9nement qui d\u00e9clenchera la d\u00e9classification. La d\u00e9classification n'interviendra pas automatiquement apr\u00e8s cet \u00e9v\u00e9nement\u00a0; elle devra \u00eatre effectu\u00e9e manuellement.
 label.classify.declassificationExemptions=Exemptions
-label.classify.lastReclassifyBy=Reclass\u00e9 par
-label.classify.lastReclassifyReason=Motif de la reclassification
+label.classify.reclassifyBy=Reclass\u00e9 par
+label.classify.reclassifyReason=Motif
+label.classify.reclassifyReason.help=Entrez le motif de \reclassification.
+label.classify.lastReclassifyBy=Derni\u00e8re reclassification par
+label.classify.lastReclassifyBy.help=Personne qui a reclass\u00e9 le fichier pour la derni\u00e8re fois.
+label.classify.lastReclassifyReason=Motif
+label.classify.lastReclassifyReason.help=Entrez le motif de \reclassification.
 label.classify.content.success=Le contenu a bien \u00e9t\u00e9 class\u00e9
-label.classify.content.failure=Impossible de classer le contenu
+label.classify.content.failure=Impossible de \
 label.edit.classified.content.success=Le contenu class\u00e9 a bien \u00e9t\u00e9 modifi\u00e9
-label.edit.classified.content.failure=Impossible de modifier le contenu class\u00e9
-label.edit.classified.content.reclassificationInformation=Vous \u00eates sur le point de {0} ce fichier.
+label.edit.classified.content.failure=Impossible de \
+label.edit.classified.content.reclassificationInformation=Vous \
 label.edit.classified.content.upgrade=mettre \u00e0 jour
 label.edit.classified.content.downgrade=r\u00e9trograder
 label.edit.classified.content.declassify=d\u00e9classer
-label.classify.classifiedBy.validation.error=Vous devez entrer un nom sans espace blanc ni au d\u00e9but ni \u00e0 la fin.
+label.classify.classifiedBy.validation.error=Vous devez entrer un nom sans \
