--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_it.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_it.properties
@@ -18,16 +18,21 @@ label.classify.downgradeInstructions=Istruzioni
 label.classify.declassificationSchedule=Pianificazione della declassificazione
 label.classify.declassificationDate=Data di declassificazione
 label.classify.declassificationEvent=Evento
-label.classify.declassificationEvent.help=L'evento che comporter\u00e0 la declassificazione. La declassificazione non verr\u00e0 eseguita automaticamente dopo l'evento, ma dovr\u00e0 essere eseguita manualmente. 
+label.classify.declassificationEvent.help=L'evento che comporter\u00e0 la declassificazione. La declassificazione non verr\u00e0 eseguita automaticamente dopo l'evento, ma dovr\u00e0 essere eseguita manualmente.
 label.classify.declassificationExemptions=Esenzioni
-label.classify.lastReclassifyBy=Riclassificato da
-label.classify.lastReclassifyReason=Motivo riclassificazione
+label.classify.reclassifyBy=Riclassificato da
+label.classify.reclassifyReason=Motivo
+label.classify.reclassifyReason.help=Immettere il motivo per il quale si intende cambiare la classificazione.
+label.classify.lastReclassifyBy=Utente ultima riclassificazione
+label.classify.lastReclassifyBy.help=L'utente che ha riclassificato il file in passato.
+label.classify.lastReclassifyReason=Motivo
+label.classify.lastReclassifyReason.help=Immettere il motivo per il quale si intende cambiare la classificazione.
 label.classify.content.success=Classificazione contenuti riuscita
 label.classify.content.failure=Impossibile classificare i contenuti
 label.edit.classified.content.success=Modifica contenuti riuscita
 label.edit.classified.content.failure=Impossibile modificare i contenuti classificati
 label.edit.classified.content.reclassificationInformation=Si sta per eseguire {0} di questo file.
-label.edit.classified.content.upgrade=l'upgrade
+label.edit.classified.content.upgrade=l''upgrade
 label.edit.classified.content.downgrade=il downgrade
 label.edit.classified.content.declassify=la declassificazione
 label.classify.classifiedBy.validation.error=\u00c8 necessario immettere un nome che non inizi o finisca con uno spazio bianco.
