--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
@@ -18,10 +18,15 @@ label.classify.downgradeInstructions=\u624b\u9806
 label.classify.declassificationSchedule=\u5206\u985e\u89e3\u9664\u306e\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
 label.classify.declassificationDate=\u5206\u985e\u89e3\u9664\u65e5
 label.classify.declassificationEvent=\u30a4\u30d9\u30f3\u30c8
-label.classify.declassificationEvent.help=\u5206\u985e\u89e3\u9664\u3092\u30c8\u30ea\u30ac\u30fc\u3059\u308b\u30a4\u30d9\u30f3\u30c8 \u3053\u306e\u30a4\u30d9\u30f3\u30c8\u306e\u5f8c\u306f\u5206\u985e\u89e3\u9664\u304c\u81ea\u52d5\u7684\u306b\u884c\u308f\u308c\u306a\u3044\u305f\u3081\u3001\u624b\u52d5\u3067\u884c\u3046\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002 
+label.classify.declassificationEvent.help=\u5206\u985e\u89e3\u9664\u3092\u30c8\u30ea\u30ac\u30fc\u3059\u308b\u30a4\u30d9\u30f3\u30c8 \u3053\u306e\u30a4\u30d9\u30f3\u30c8\u306e\u5f8c\u306f\u5206\u985e\u89e3\u9664\u304c\u81ea\u52d5\u7684\u306b\u884c\u308f\u308c\u306a\u3044\u305f\u3081\u3001\u624b\u52d5\u3067\u884c\u3046\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
 label.classify.declassificationExemptions=\u5bfe\u8c61\u5916
-label.classify.lastReclassifyBy=\u518d\u5206\u985e\u62c5\u5f53\u8005
-label.classify.lastReclassifyReason=\u518d\u5206\u985e\u7406\u7531
+label.classify.reclassifyBy=\u518d\u5206\u985e\u62c5\u5f53\u8005
+label.classify.reclassifyReason=\u7406\u7531
+label.classify.reclassifyReason.help=\u5206\u985e\u3092\u5909\u66f4\u3059\u308b\u7406\u7531\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+label.classify.lastReclassifyBy=\u524d\u56de\u306e\u518d\u5206\u985e\u62c5\u5f53\u8005
+label.classify.lastReclassifyBy.help=\u30d5\u30a1\u30a4\u30eb\u306e\u5206\u985e\u3092\u524d\u56de\u5909\u66f4\u3057\u305f\u62c5\u5f53\u8005\u3067\u3059\u3002
+label.classify.lastReclassifyReason=\u7406\u7531
+label.classify.lastReclassifyReason.help=\u5206\u985e\u3092\u5909\u66f4\u3059\u308b\u7406\u7531\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 label.classify.content.success=\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u5206\u985e\u3055\u308c\u307e\u3057\u305f
 label.classify.content.failure=\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u5206\u985e\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 label.edit.classified.content.success=\u5206\u985e\u6e08\u307f\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u7de8\u96c6\u3055\u308c\u307e\u3057\u305f
