NORWEGIAN Bokmal: Updated RM 3.0 bundle based on EN-RM-rev111215
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112093 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
@@ -18,10 +18,15 @@ label.classify.downgradeInstructions=Instruksjoner
 label.classify.declassificationSchedule=Deklassifiseringsplan
 label.classify.declassificationDate=Deklassifiseringsdato
 label.classify.declassificationEvent=Hendelse
-label.classify.declassificationEvent.help=Hendelse som vil utl\u00f8se deklassifisering. Deklassifisering skjer ikke automatisk etter denne hendelsen - den m\u00e5 gj\u00f8res manuelt. 
+label.classify.declassificationEvent.help=Hendelse som vil utl\u00f8se deklassifisering. Deklassifisering skjer ikke automatisk etter denne hendelsen - den m\u00e5 gj\u00f8res manuelt.
 label.classify.declassificationExemptions=Unntak
-label.classify.lastReclassifyBy=Reklassifisert av
-label.classify.lastReclassifyReason=Reklassifiseringsgrunn
+label.classify.reclassifyBy=Reklassifisert av
+label.classify.reclassifyReason=Grunn
+label.classify.reclassifyReason.help=Angi grunnen til at klassifiseringen endres.
+label.classify.lastReclassifyBy=Sist reklassifisert av
+label.classify.lastReclassifyBy.help=Dette er personen som har reklassifisert filen tidligere.
+label.classify.lastReclassifyReason=Grunn
+label.classify.lastReclassifyReason.help=Angi grunnen til at klassifiseringen endres.
 label.classify.content.success=Innholdet er n\u00e5 klassifisert
 label.classify.content.failure=Vi kunne ikke klassifiseres innhold
 label.edit.classified.content.success=Klassifisert innhold er n\u00e5 redigert
