DUTCH: Updated RM 3.0 bundle based on EN-RM-rev111215
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112094 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
@@ -18,15 +18,20 @@ label.classify.downgradeInstructions=Instructies
 label.classify.declassificationSchedule=Classificatieopheffingsschema
 label.classify.declassificationDate=Classificatieopheffingsdatum
 label.classify.declassificationEvent=Gebeurtenis
-label.classify.declassificationEvent.help=De gebeurtenis die classificatieopheffing triggert. Classificatieopheffing vindt niet automatisch plaats na deze gebeurtenis, maar moet handmatig worden uitgevoerd. 
+label.classify.declassificationEvent.help=De gebeurtenis die classificatieopheffing triggert. Classificatieopheffing vindt niet automatisch plaats na deze gebeurtenis, maar moet handmatig worden uitgevoerd.
 label.classify.declassificationExemptions=Uitzonderingen
-label.classify.lastReclassifyBy=Geherclassificeerd op
-label.classify.lastReclassifyReason=Reden van herclassificatie
+label.classify.reclassifyBy=Geherclassificeerd op
+label.classify.reclassifyReason=Reden
+label.classify.reclassifyReason.help=Voer de reden in waarom u de classificatie wijzigt.
+label.classify.lastReclassifyBy=Laatst geherclassificeerd door
+label.classify.lastReclassifyBy.help=Dit is de persoon die het bestand de vorige keer heeft geherclassificeerd.
+label.classify.lastReclassifyReason=Reden
+label.classify.lastReclassifyReason.help=Voer de reden in waarom u de classificatie wijzigt.
 label.classify.content.success=Content is geclassificeerd
 label.classify.content.failure=Content kan niet worden geclassificeerd
 label.edit.classified.content.success=Geclassificeerde content is bewerkt
 label.edit.classified.content.failure=Geclassificeerde content kan niet worden bewerkt
-label.edit.classified.content.reclassificationInformation=U staat op het punt om dit bestand te {0}.
+label.edit.classified.content.reclassificationInformation=U staat op het punt dit bestand te {0}.
 label.edit.classified.content.upgrade=upgraden
 label.edit.classified.content.downgrade=downgraden
 label.edit.classified.content.declassify=declassificeren
