BRAZILIAN PORTUGUESE: Updated RM 3.0 bundle based on EN-RM-rev111215
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112096 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
@@ -18,10 +18,15 @@ label.classify.downgradeInstructions=Instru\u00e7\u00f5es
 label.classify.declassificationSchedule=Programa\u00e7\u00e3o de desclassifica\u00e7\u00e3o
 label.classify.declassificationDate=Data de desclassifica\u00e7\u00e3o
 label.classify.declassificationEvent=Evento
-label.classify.declassificationEvent.help=O evento que acionar\u00e1 a desclassifica\u00e7\u00e3o. A desclassifica\u00e7\u00e3o n\u00e3o acontecer\u00e1 automaticamente ap\u00f3s este evento - ela precisa ser feita manualmente. 
+label.classify.declassificationEvent.help=O evento que acionar\u00e1 a desclassifica\u00e7\u00e3o. A desclassifica\u00e7\u00e3o n\u00e3o acontecer\u00e1 automaticamente ap\u00f3s este evento - ela precisa ser feita manualmente.
 label.classify.declassificationExemptions=Isen\u00e7\u00f5es
-label.classify.lastReclassifyBy=Reclassificado por
-label.classify.lastReclassifyReason=Raz\u00e3o para reclassifica\u00e7\u00e3o
+label.classify.reclassifyBy=Reclassificado por
+label.classify.reclassifyReason=Motivo
+label.classify.reclassifyReason.help=Digite o motivo pelo qual voc\u00ea est\u00e1 mudando a classifica\u00e7\u00e3o.
+label.classify.lastReclassifyBy=\u00daltima reclassifica\u00e7\u00e3o por
+label.classify.lastReclassifyBy.help=Esta \u00e9 a pessoa que anteriormente reclassificou o arquivo.
+label.classify.lastReclassifyReason=Motivo
+label.classify.lastReclassifyReason.help=Digite o motivo pelo qual voc\u00ea est\u00e1 mudando a classifica\u00e7\u00e3o.
 label.classify.content.success=Conte\u00fado classificado corretamente
 label.classify.content.failure=N\u00e3o foi poss\u00edvel classificar conte\u00fado
 label.edit.classified.content.success=Conte\u00fado classificado editado corretamente
