GERMAN: Updated RM 3.0 bundle based on EN-RM-rev112098
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112199 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_de.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_de.properties
@@ -26,7 +26,7 @@ label.classify.reclassifyReason.help=Geben Sie einen Grund f\u00fcr die \u00c4nd
 label.classify.lastReclassifyBy=Zuletzt reklassifiziert von
 label.classify.lastReclassifyBy.help=Die Person, die die Datei zuletzt reklassifiziert hat.
 label.classify.lastReclassifyReason=Grund
-label.classify.lastReclassifyReason.help=Geben Sie einen Grund f\u00fcr die \u00c4nderung der Klassifizierung an.
+label.classify.lastReclassifyReason.help=Der Grund f\u00fcr die vorherige Reklassifizierung. Wenn n\u00f6tig, k\u00f6nnen Sie dies \u00e4ndern.
 label.classify.content.success=Inhalt wurde erfolgreich klassifiziert
 label.classify.content.failure=Inhalt konnte nicht klassifiziert werden
 label.edit.classified.content.success=Klassifizierter Inhalt wurde erfolgreich bearbeitet
