SPANISH: Updated RM 3.0 bundle based on EN-RM-rev112098
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112200 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
@@ -26,7 +26,7 @@ label.classify.reclassifyReason.help=Introduzca la raz\u00f3n por la que est\u00
 label.classify.lastReclassifyBy=Reclasificado por \u00faltima vez por
 label.classify.lastReclassifyBy.help=Esta es la persona que reclasific\u00f3 el fichero anteriormente.
 label.classify.lastReclassifyReason=Raz\u00f3n
-label.classify.lastReclassifyReason.help=Introduzca la raz\u00f3n por la que est\u00e1 cambiando la clasificaci\u00f3n.
+label.classify.lastReclassifyReason.help=Esta es la raz\u00f3n por la que el fichero se reclasific\u00f3 previamente. Puede cambiar esto si es necesario.
 label.classify.content.success=Contenido clasificado correctamente
 label.classify.content.failure=No se ha podido clasificar el contenido
 label.edit.classified.content.success=Contenido clasificado editado correctamente
