--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
@@ -26,7 +26,7 @@ label.classify.reclassifyReason.help=\u5206\u985e\u3092\u5909\u66f4\u3059\u308b\
 label.classify.lastReclassifyBy=\u524d\u56de\u306e\u518d\u5206\u985e\u62c5\u5f53\u8005
 label.classify.lastReclassifyBy.help=\u30d5\u30a1\u30a4\u30eb\u306e\u5206\u985e\u3092\u524d\u56de\u5909\u66f4\u3057\u305f\u62c5\u5f53\u8005\u3067\u3059\u3002
 label.classify.lastReclassifyReason=\u7406\u7531
-label.classify.lastReclassifyReason.help=\u5206\u985e\u3092\u5909\u66f4\u3059\u308b\u7406\u7531\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+label.classify.lastReclassifyReason.help=\u524d\u56de\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u5206\u985e\u3057\u305f\u7406\u7531\u3067\u3059\u3002 \u5fc5\u8981\u306b\u5fdc\u3058\u3066\u5185\u5bb9\u3092\u5909\u66f4\u3067\u304d\u307e\u3059\u3002
 label.classify.content.success=\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u5206\u985e\u3055\u308c\u307e\u3057\u305f
 label.classify.content.failure=\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u5206\u985e\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 label.edit.classified.content.success=\u5206\u985e\u6e08\u307f\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u7de8\u96c6\u3055\u308c\u307e\u3057\u305f
