ITALIAN: Updated RM 3.0 bundle based on EN-RM-rev112098
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112209 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_it.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_it.properties
@@ -22,11 +22,11 @@ label.classify.declassificationEvent.help=L'evento che comporter\u00e0 la declas
 label.classify.declassificationExemptions=Esenzioni
 label.classify.reclassifyBy=Riclassificato da
 label.classify.reclassifyReason=Motivo
-label.classify.reclassifyReason.help=Immettere il motivo per il quale si intende cambiare la classificazione.
+label.classify.reclassifyReason.help=Specificare il motivo per il quale si intende cambiare la classificazione.
 label.classify.lastReclassifyBy=Utente ultima riclassificazione
 label.classify.lastReclassifyBy.help=L'utente che ha riclassificato il file in passato.
 label.classify.lastReclassifyReason=Motivo
-label.classify.lastReclassifyReason.help=Immettere il motivo per il quale si intende cambiare la classificazione.
+label.classify.lastReclassifyReason.help=Motivo per il quale il file \u00e8 stato riclassificato in passato. Pu\u00f2 essere cambiato, se necessario.
 label.classify.content.success=Classificazione contenuti riuscita
 label.classify.content.failure=Impossibile classificare i contenuti
 label.edit.classified.content.success=Modifica contenuti riuscita
