FRENCH: Updated RM 3.0 bundle based on EN-RM-rev112098
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112210 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_fr.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_fr.properties
@@ -22,17 +22,17 @@ label.classify.declassificationEvent.help=Ev\u00e9nement qui d\u00e9clenchera la
 label.classify.declassificationExemptions=Exemptions
 label.classify.reclassifyBy=Reclass\u00e9 par
 label.classify.reclassifyReason=Motif
-label.classify.reclassifyReason.help=Entrez le motif de \reclassification.
+label.classify.reclassifyReason.help=Entrez le motif de la reclassification.
 label.classify.lastReclassifyBy=Derni\u00e8re reclassification par
 label.classify.lastReclassifyBy.help=Personne qui a reclass\u00e9 le fichier pour la derni\u00e8re fois.
 label.classify.lastReclassifyReason=Motif
-label.classify.lastReclassifyReason.help=Entrez le motif de \reclassification.
+label.classify.lastReclassifyReason.help=Motif pour lequel le fichier a \u00e9t\u00e9 pr\u00e9c\u00e9demment reclass\u00e9. Il peut \u00eatre modifi\u00e9 le cas \u00e9ch\u00e9ant.
 label.classify.content.success=Le contenu a bien \u00e9t\u00e9 class\u00e9
-label.classify.content.failure=Impossible de \
+label.classify.content.failure=Impossible de classer le contenu
 label.edit.classified.content.success=Le contenu class\u00e9 a bien \u00e9t\u00e9 modifi\u00e9
-label.edit.classified.content.failure=Impossible de \
-label.edit.classified.content.reclassificationInformation=Vous \
+label.edit.classified.content.failure=Impossible de modifier le contenu class\u00e9
+label.edit.classified.content.reclassificationInformation=Vous \u00eates sur le point de {0} ce fichier.
 label.edit.classified.content.upgrade=mettre \u00e0 jour
 label.edit.classified.content.downgrade=r\u00e9trograder
 label.edit.classified.content.declassify=d\u00e9classer
-label.classify.classifiedBy.validation.error=Vous devez entrer un nom sans \
+label.classify.classifiedBy.validation.error=Vous devez entrer un nom sans espace blanc ni au d\u00e9but ni \u00e0 la fin.
