DUTCH: Updated RM 3.0 bundle based on EN-RM-rev112098
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@112211 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
@@ -26,12 +26,12 @@ label.classify.reclassifyReason.help=Voer de reden in waarom u de classificatie 
 label.classify.lastReclassifyBy=Laatst geherclassificeerd door
 label.classify.lastReclassifyBy.help=Dit is de persoon die het bestand de vorige keer heeft geherclassificeerd.
 label.classify.lastReclassifyReason=Reden
-label.classify.lastReclassifyReason.help=Voer de reden in waarom u de classificatie wijzigt.
+label.classify.lastReclassifyReason.help=Dit is de reden waarom het bestand de vorige keer is geherclassificeerd. Indien nodig kunt u deze reden wijzigen.
 label.classify.content.success=Content is geclassificeerd
 label.classify.content.failure=Content kan niet worden geclassificeerd
 label.edit.classified.content.success=Geclassificeerde content is bewerkt
 label.edit.classified.content.failure=Geclassificeerde content kan niet worden bewerkt
-label.edit.classified.content.reclassificationInformation=U staat op het punt dit bestand te {0}.
+label.edit.classified.content.reclassificationInformation=U staat op het punt om dit bestand te {0}.
 label.edit.classified.content.upgrade=upgraden
 label.edit.classified.content.downgrade=downgraden
 label.edit.classified.content.declassify=declassificeren
