--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
@@ -26,7 +26,7 @@ label.classify.reclassifyReason.help=Angi grunnen til at klassifiseringen endres
 label.classify.lastReclassifyBy=Sist reklassifisert av
 label.classify.lastReclassifyBy.help=Dette er personen som har reklassifisert filen tidligere.
 label.classify.lastReclassifyReason=Grunn
-label.classify.lastReclassifyReason.help=Angi grunnen til at klassifiseringen endres.
+label.classify.lastReclassifyReason.help=Dette er \u00e5rsaken til at filen tidligere ble reklassifisert. Du kan endre dette hvis n\u00f8dvendig.
 label.classify.content.success=Innholdet er n\u00e5 klassifisert
 label.classify.content.failure=Vi kunne ikke klassifiseres innhold
 label.edit.classified.content.success=Klassifisert innhold er n\u00e5 redigert
