--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
@@ -26,7 +26,7 @@ label.classify.reclassifyReason.help=Digite o motivo pelo qual voc\u00ea est\u00
 label.classify.lastReclassifyBy=\u00daltima reclassifica\u00e7\u00e3o por
 label.classify.lastReclassifyBy.help=Esta \u00e9 a pessoa que anteriormente reclassificou o arquivo.
 label.classify.lastReclassifyReason=Motivo
-label.classify.lastReclassifyReason.help=Digite o motivo pelo qual voc\u00ea est\u00e1 mudando a classifica\u00e7\u00e3o.
+label.classify.lastReclassifyReason.help=Esta \u00e9 a raz\u00e3o do arquivo ter sido reclassificado anteriormente. Voc\u00ea pode alterar isso se for necess\u00e1rio.
 label.classify.content.success=Conte\u00fado classificado corretamente
 label.classify.content.failure=N\u00e3o foi poss\u00edvel classificar conte\u00fado
 label.edit.classified.content.success=Conte\u00fado classificado editado corretamente
