--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_zh_CN.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_zh_CN.properties
@@ -26,12 +26,12 @@ label.classify.reclassifyReason.help=\u8f93\u5165\u60a8\u66f4\u6539\u5206\u7c7b\
 label.classify.lastReclassifyBy=\u4e0a\u6b21\u91cd\u65b0\u5206\u7c7b\u8005
 label.classify.lastReclassifyBy.help=\u8fd9\u662f\u4e0a\u6b21\u91cd\u65b0\u5206\u7c7b\u6587\u4ef6\u7684\u4eba\u5458\u3002
 label.classify.lastReclassifyReason=\u539f\u56e0
-label.classify.lastReclassifyReason.help=\u8f93\u5165\u60a8\u66f4\u6539\u5206\u7c7b\u7684\u539f\u56e0\u3002
+label.classify.lastReclassifyReason.help=\u8fd9\u662f\u4e4b\u524d\u5bf9\u8be5\u6587\u4ef6\u8fdb\u884c\u91cd\u65b0\u5206\u7c7b\u7684\u539f\u56e0\u3002 \u5fc5\u8981\u65f6\uff0c\u60a8\u53ef\u5bf9\u6b64\u8fdb\u884c\u66f4\u6539\u3002
 label.classify.content.success=\u5df2\u6210\u529f\u5206\u7c7b\u5185\u5bb9
 label.classify.content.failure=\u6211\u4eec\u65e0\u6cd5\u5bf9\u5185\u5bb9\u5206\u7c7b
 label.edit.classified.content.success=\u5df2\u6210\u529f\u7f16\u8f91\u5206\u7c7b\u5185\u5bb9
 label.edit.classified.content.failure=\u6211\u4eec\u65e0\u6cd5\u7f16\u8f91\u5206\u7c7b\u5185\u5bb9
-label.edit.classified.content.reclassificationInformation=\u60a8\u6253\u7b97{0}\u6b64\u6587\u4ef6\u3002
+label.edit.classified.content.reclassificationInformation=\u60a8\u6253\u7b97 {0} \u6b64\u6587\u4ef6\u3002
 label.edit.classified.content.upgrade=\u5347\u7ea7
 label.edit.classified.content.downgrade=\u964d\u7ea7
 label.edit.classified.content.declassify=\u53d6\u6d88\u5206\u7c7b
