--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_pt_BR.properties
@@ -16,13 +16,13 @@ label.datatype.date=Data
 message.getpropertiesfail=N\u00e3o foi poss\u00edvel recuperar defini\u00e7\u00f5es de propriedade personalizada.
 message.noproperties=Nenhuma propriedade personalizada definida.
 message.create-success=Nova propriedade personalizada adicionada com sucesso.
-message.create-failure=N\u00e3o foi poss\u00edvel adicionar a nova propriedade personalizada: {0} {0}
+message.create-failure=N\u00e3o foi poss\u00edvel adicionar a nova propriedade personalizada: {0}
 message.edit-success=Propriedade personalizada salva com sucesso.
-message.edit-failure=N\u00e3o foi poss\u00edvel salvar a propriedade personalizada: {0} {0}
+message.edit-failure=N\u00e3o foi poss\u00edvel salvar a propriedade personalizada: {0}
 message.delete.title=Excluir propriedade personalizada
-message.delete.text=Tem certeza de que deseja excluir: {0}? {0}
+message.delete.text=Tem certeza de que deseja excluir: {0}?
 message.delete-success=Propriedade personalizada exclu\u00edda com sucesso.
-message.delete-failure=N\u00e3o foi poss\u00edvel excluir a propriedade personalizada: {0} {0}
+message.delete-failure=N\u00e3o foi poss\u00edvel excluir a propriedade personalizada: {0}
 
 mandatory.true=Verdadeiro
 mandatory.false=Falso
