--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
@@ -16,13 +16,13 @@ label.datatype.date=\u65e5\u671f
 message.getpropertiesfail=\u65e0\u6cd5\u68c0\u7d22\u81ea\u5b9a\u4e49\u5c5e\u6027\u5b9a\u4e49\u3002
 message.noproperties=\u672a\u5b9a\u4e49\u81ea\u5b9a\u4e49\u5c5e\u6027\u3002
 message.create-success=\u5df2\u6210\u529f\u6dfb\u52a0\u65b0\u7684\u81ea\u5b9a\u4e49\u5c5e\u6027\u3002
-message.create-failure=\u65e0\u6cd5\u6dfb\u52a0\u65b0\u7684\u81ea\u5b9a\u4e49\u5c5e\u6027\uff1a{0} {0}
+message.create-failure=\u65e0\u6cd5\u6dfb\u52a0\u65b0\u7684\u81ea\u5b9a\u4e49\u5c5e\u6027\uff1a{0}
 message.edit-success=\u5df2\u6210\u529f\u4fdd\u5b58\u81ea\u5b9a\u4e49\u5c5e\u6027\u3002
-message.edit-failure=\u65e0\u6cd5\u4fdd\u5b58\u81ea\u5b9a\u4e49\u5c5e\u6027\uff1a{0} {0}
+message.edit-failure=\u65e0\u6cd5\u4fdd\u5b58\u81ea\u5b9a\u4e49\u5c5e\u6027\uff1a{0}
 message.delete.title=\u5220\u9664\u81ea\u5b9a\u4e49\u5c5e\u6027
-message.delete.text=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\uff1a{0}\uff1f {0}
+message.delete.text=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\uff1a{0}\uff1f
 message.delete-success=\u5df2\u6210\u529f\u5220\u9664\u81ea\u5b9a\u4e49\u5c5e\u6027\u3002
-message.delete-failure=\u65e0\u6cd5\u5220\u9664\u81ea\u5b9a\u4e49\u5c5e\u6027\uff1a{0} {0}
+message.delete-failure=\u65e0\u6cd5\u5220\u9664\u81ea\u5b9a\u4e49\u5c5e\u6027\uff1a{0}
 
 mandatory.true=True
 mandatory.false=False
